2018-02-27  Doug Russell  <doug@getitdownonpaper.com>

        AX: Spell check and style attributes should be optional when fetching attributed string
        https://bugs.webkit.org/show_bug.cgi?id=160744

        Reviewed by Chris Fleizach.

        The overhead of fetching a spell checked attributed string via AX API is substantial. 
        In some cases on the order of 7/8 of the total time spent fetching the string.

        This change introduces the new attribute AXAttributedStringForTextMarkerRangeWithOptions which accepts an NSDictionary as it's parameter with keys "AXTextMarkerRange" (AXTextMarkerRangeRef) and "AXSpellCheck" (NSNumber(BOOL)).

        AXAttributedStringForTextMarkerRange will remain unchanged.

        * accessibility/mac/attributed-string: Added.
        * accessibility/mac/attributed-string/attributed-string-for-range-expected.txt: Added.
        * accessibility/mac/attributed-string/attributed-string-for-range-with-options-expected.txt: Added.
        * accessibility/mac/attributed-string/attributed-string-for-range-with-options.html: Added.
        * accessibility/mac/attributed-string/attributed-string-for-range.html: Added.
        * accessibility/mac/bounds-for-range-expected.txt:

2018-02-27  Antoine Quint  <graouts@apple.com>

        Unreviewed, marking a number of Web Animations WPT tests non-flaky.

        * TestExpectations:

2018-02-27  Frederic Wang  <fwang@igalia.com>

        Relayout frames after AsyncFrameScrolling or FrameFlattening option is changed
        https://bugs.webkit.org/show_bug.cgi?id=183081

        Reviewed by Antonio Gomes.

        Add a test to check whether an iframe changes its flattening status after one of the option
        AsyncFrameScrolling/FrameFlattening is enabled/disabled.

        * platform/ios-simulator/TestExpectations: Remove failure.
        * platform/ios/fast/frames/flattening/iframe-flattening-async-frame-scrolling-dynamic-expected.txt: Added.