@@ -1,3 +1,9 @@
+2018-02-27  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        Unreviewed GTK test gardening
+
+        * TestWebKitAPI/glib/TestExpectations.json:
+
 2018-02-27  Doug Russell  <doug@getitdownonpaper.com>
 
         AX: Spell check and style attributes should be optional when fetching attributed string
